Resinate: Attempt to fix gaps between dividers and edges on mobile screens.

--- a/src/css/creative.css
+++ b/src/css/creative.css
@@ -549,6 +549,7 @@ div.banner-image {
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	line-height: 0;
 }
 
 @media (min-width: 992px) {
